add dark footer + AboutUs>navbar

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -29,4 +29,6 @@ $textColor: white;
 
 .background{
     background-image: url('../../../assets/imgs/sw bg.jpg');
+    background-color: $backgroundColor;
+    color: $textColor;
 }
