--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.scss
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.scss
@@ -7,8 +7,17 @@
 }
 .scroll{
   width:100%;
-  height:50px
+  height:100px
 }
 .title-center{
   text-align: center;
+}
+
+.associated{
+    //background-image: url('../../../assets/imgs/associatedLogo.png');
+}
+
+.detailCard{
+  height:50px;
+  background-color: grey
 }
