amelioration liste, mais ya du boulot ^^

--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.scss
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.scss
@@ -11,6 +11,12 @@
   width:100%;
   height:100%;
 }
-.cardList{
-  height:100px
+.item{
+  background-color: rgba(5, 23, 40, 0.95);
+  margin-bottom: 10px
+
+}
+
+.itemDiv{
+  text-align: center;
 }
