--- a/src/pages/community-tab/aboutUs-page/aboutUs.scss
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.scss
@@ -14,6 +14,6 @@ img{
     @include mixMargins;
     text-align: justify;
 }
-.toolbar-title #navAboutUs{
-    color:green;
+h1, #cardHeader{
+    color:#488aff;
 }
