Revert "add img to community button"
This reverts commit d4d66046cfec52b4022f20b99abf07f705cee63c.

--- a/src/pages/community-tab/aboutUs-page/aboutUs.scss
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.scss
@@ -14,6 +14,6 @@ img{
     @include mixMargins;
     text-align: justify;
 }
-h1, #cardHeader{
-    color:#488aff;
+.toolbar-title #navAboutUs{
+    color:green;
 }
