--- a/src/pages/community-tab/communityIndex-page/communityIndex.scss
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.scss
@@ -1,13 +1,7 @@
-.buttonStarwars{
+.buttonCommunity{
     @include mixCenter;
     display: block;
     margin-top: 25px;
-    height:80px
-  }
-
-.imgStarwars{
-    width:60px;
-    height:60px;
-    margin-right: 10px;
-  }
-  
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
