--- a/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.scss
+++ b/src/pages/starwars-tab/starWarsObjectDetail-page/starWarsObjectDetail.scss
@@ -4,13 +4,16 @@
 }
 .block{
   display: block;
+  padding-left: 20px
 }
 .scroll{
   width:100%;
-  height:100px
+  height:100px;
+  margin-left: 20px
 }
-.title-center{
+.titleList{
   text-align: center;
+  color: "#FFF"
 }
 
 .associated{
@@ -18,6 +21,20 @@
 }
 
 .detailCard{
-  height:50px;
-  background-color: grey
+  background-color: rgba(13, 48, 82, 1);
+  margin-right: 10px;
+  //  width:60%;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 50px;
+  text-align: center;
+  border-radius: 50px;
+}
+
+.imgDetail{
+  width:100%;
+  height:150px
+}
+.blockInfo{
+  background-color: "#300B19"
 }
