update text about us

--- a/src/pages/community-tab/aboutUs-page/aboutUs.scss
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.scss
@@ -1,18 +1,14 @@
 
-#headerAbout, #buttonAboutUs, img{
+#headerAbout, #buttonAboutUs, #logo-asso{
     @include mixCenter;
 }
-img{
+#logo-asso{
     margin-top: 10px;
     width:120px;
     height: 120px; 
 }
-.labelAboutUs{
+.labelAboutUs, .cardAboutUs{
     @include mixMargins;  
-}
-.cardAboutUs{
-    @include mixMargins;
-    text-align: justify;
 }
 #headerAbout, #cardHeader{
     color: #488aff;
