--- a/src/pages/community-tab/communityIndex-page/communityIndex.scss
+++ b/src/pages/community-tab/communityIndex-page/communityIndex.scss
@@ -2,6 +2,5 @@
     @include mixCenter;
     display: block;
     margin-top: 25px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    height:80px;
 }
