add version in About Us

--- a/src/pages/community-tab/aboutUs-page/aboutUs.scss
+++ b/src/pages/community-tab/aboutUs-page/aboutUs.scss
@@ -13,3 +13,8 @@
 #headerAbout, #cardHeader{
     color: #488aff;
 }
+#label-version{
+    position: absolute;
+    right:10px;
+    color:grey;    
+}
