--- a/src/pages/starwars-tab/starWarsObject-page/starWarsObject.scss
+++ b/src/pages/starwars-tab/starWarsObject-page/starWarsObject.scss
@@ -20,8 +20,6 @@
   margin-left: 20%;
   border-color: "#FFF";
   border-width: 5px;
-
-
 }
 
 .itemDiv{
@@ -30,4 +28,7 @@
 .imgList{
   width:50px;
   height:50px;
+}
+.spinner{
+  fill:white
 }
