changement du design community

--- a/src/pages/community-tab/event-page/event.scss
+++ b/src/pages/community-tab/event-page/event.scss
@@ -11,7 +11,7 @@
   background-color: #2C3B63;
   padding: 20px;
   width: 100%;
-  font-family: Roboto;
+  font-family: STARWARS;
 }
 .desc{
   width: 100%;
