--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -82,4 +82,5 @@ $colors: (
 // --------------------------------------------------
 
 @import "roboto";
+//@import "STARWARS";
 @import "noto-sans";
