--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,7 +33,6 @@ $textColor: white;
     color:$textColor;
 }
 .background{
-    background-image: url('/assets/imgs/swbg.png');
-    background-color: $backgroundColor;
+    background-image: url('../assets/imgs/swbg.png');
     color: $textColor;
 }
