--- a/src/pages/community-tab/event-page/event.scss
+++ b/src/pages/community-tab/event-page/event.scss
@@ -20,6 +20,7 @@
   color: #424242;
   padding: 20px;
   padding-bottom: 30px;
+  font-family: STARWARS;
 }
 .readmore{
   margin: 5px;
@@ -29,6 +30,7 @@
   font-size:1em;
   color:#0288D1;
   font-size: 18px;
+  font-family: STARWARS;
 }
 .overflow{
   overflow: hidden;
