amelioration graphique SW detail + listes !!!

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -20,8 +20,11 @@ $backgroundColor : black;
 $textColor: white;
 @font-face {
 font-family: starwars;
-src: url(../assets/fonts/STARWARS.ttf) format("ttf");
+src: url(../fonts/STARWARS.ttf) format("ttf");
 font-weight: 200
+}
+body{
+    font-family: starwars !important;
 }
 @mixin mixMargins{
     margin: 0 $marginHorizontal 0 $marginHorizontal;
@@ -37,7 +40,6 @@ font-weight: 200
     color:$textColor;
 }
 .background{
-    background-image: url('/assets/imgs/swbg.png');
-    background-color: $backgroundColor;
+    background-image: url('../assets/imgs/swbg.png');
     color: $textColor;
 }
